[package]
name = "css_forge"
version = "0.1.0"
edition = "2021"
description = "A robust and efficient CSS parsing library for Rust"
authors = ["benodiwal <sachinbeniwal0101@gmail.com>"]
repository = "https://github.com/benodiwal/css_forge"
license = "MIT"
readme = "README.md"
keywords = ["css", "styles", "parser"]
categories = ["parsing", "web-programming"]

[dependencies]
